I needed a win: I redid my button style; and properly aligned my footer (along with additional styles).  I also change 'Quit' to 'No additional team members.  Generate team.  Quit CLI application.'  This is to leave room for me to make a "quit();" without getting confused/to avoid naming conclits, if I do need to make such a function to end my CLI app. (there has to be a simple way, without having to redo my app.js, entirely).

--- a/Assets/stylesheet/team.css
+++ b/Assets/stylesheet/team.css
@@ -1,61 +1,113 @@
-/* Ref. https://epicbootstrap.com/snippets/footer-basic */
+body {
+  background-image: url(https://media.giphy.com/media/P4X0M9pR7C3ilMDZVS/giphy.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* min-height: 100vh;
+  min-width: 100vw; */
+  /* background-position: center; */
+}
 
+/* Make your own button style https://www.bestcssbuttongenerator.com/ */
+.hype {
+	box-shadow: inset 0px 1px 0px 0px #ffd9b0;
+	background: linear-gradient(to bottom, #ffcc66 5%, #2441ff 100%);
+	background-color: #ffcc66;
+	border-radius: 6px;
+	border: 1px solid #1010cc;
+	display: inline-block;
+	cursor: pointer;
+	color: #2754c4;
+	font-family: Arial;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 1px 12px;
+	text-decoration: none;
+	text-shadow: 0px 1px 0px #ffb566;
+}
+
+.hype:hover {
+	background: linear-gradient(to bottom, #2441ff 5%, #ffcc66 100%);
+	background-color: #2441ff;
+}
+
+.hype:active {
+	position: relative;
+	top: 1px;
+}
+
+/* Emphasizing to "Star" my repository. */
+.star {
+  color: gold;
+  text-shadow: 1px 1px 1px  #2441ff;
+  background-color: white (opacity 0.7);
+  font-size: larger;
+}
+
+
+/* Ref. https://epicbootstrap.com/snippets/footer-basic */
 .footer {
-    padding:40px 0;
-    background-color:#ffffff;
-    color:#4b4c4d;
-  }
+  padding:40px 0;
+  background-color:none;
+  color: #4b4c4d;
+  position: absolute;
+  align-items: center;
+  text-align: center;
+  /* 👇🏿 Ref. https://www.freecodecamp.org/news/how-to-keep-your-footer-where-it-belongs-59c6aa05c59c/ */
+  bottom: 100px;
+  width: 100%;
+  height: 2.5rem;
+}
   
-  .footer ul {
-    padding:0;
-    list-style:none;
-    text-align:center;
-    font-size:18px;
-    line-height:1.6;
-    margin-bottom:0;
-  }
-  
-  .footer li {
-    padding:0 10px;
-  }
-  
-  .footer ul a {
-    color:inherit;
-    text-decoration:none;
-    opacity:0.8;
-  }
-  
-  .footer ul a:hover {
-    opacity:1;
-  }
-  
-  .footer .social {
-    text-align:center;
-    padding-bottom:25px;
-  }
-  
-  .footer .social > a {
-    font-size:24px;
-    width:40px;
-    height:40px;
-    line-height:40px;
-    display:inline-block;
-    text-align:center;
-    border-radius:50%;
-    border:1px solid #ccc;
-    margin:0 8px;
-    color:inherit;
-    opacity:0.75;
-  }
-  
-  .footer .social > a:hover {
-    opacity:0.9;
-  }
-  
-  .footer .copyright {
-    margin-top:15px;
-    text-align:center;
-    font-size:13px;
-    color:#aaa;
-    margin-bottom:0;
-  }
+.footer ul {
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.6;
+  margin-bottom: 0;
+}
+
+.footer li {
+  padding: 0 10px;
+}
+
+.footer ul a {
+  color: inherit;
+  text-decoration: none;
+  opacity: 0.8;
+}
+
+.footer ul a:hover {
+  opacity: 1;
+}
+
+.footer .social {
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+.footer .social > a {
+  font-size: 24px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  border: 1px solid #ccc;
+  margin: 0 8px;
+  color: inherit;
+  opacity: 0.75;
+}
+
+.footer .social > a:hover {
+  opacity: 0.9;
+}
+
+.footer .copyright {
+  margin-top: 2px;
+  text-align: center;
+  font-size: 12px;
+  color: #aaa;
+  margin-bottom: 0;
+}
